src/objects/XAP_REST_Request__c.object
<CustomObject>
    <fields>
        <fullName>Headers__c</fullName>
        <label>Headers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Http_Method__c</fullName>
        <label>Http Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DELETE</fullName>
                </value>
                <value>
                    <fullName>GET</fullName>
                </value>
                <value>
                    <fullName>HEAD</fullName>
                </value>
                <value>
                    <fullName>PATCH</fullName>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Integration User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Async_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Email__c</fullName>
        <label>New Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Params__c</fullName>
        <label>Params</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remote_IP_Address__c</fullName>
        <label>Remote IP Address</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_URI__c</fullName>
        <label>Request URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Path__c</fullName>
        <label>Resource Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Email__c</fullName>
        <label>Target Email</label>
        <type>Email</type>
    </fields>
    <label>REST Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Http_Method__c</columns>
        <columns>Request_URI__c</columns>
        <columns>Resource_Path__c</columns>
        <columns>Params__c</columns>
        <columns>Target_Email__c</columns>
        <columns>New_Email__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RRQ-{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>REST Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>REST Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>